# MIDPS-labs

./: .gitignore  README.md
[lab2]/: .gitignore  HCalculator  HCalculator.cabal  LICENSE  README.md  cabal.sandbox.config  install  requirements.txt  runapp
[lab2]/.cabal-sandbox/: world
[lab2]/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/Cabal-1.24.2.0-45o0FUpyFN37zWkD49ewei/: Paths_Cabal.dyn_hi
[lab2]/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/gtk2hs-buildtools-0.13.2.2-KZIOput7giu2qTTZXXWCkF/: Attributes.dyn_hi  BaseVersion.dyn_hi  Binary.dyn_hi  C.dyn_hi  C2HSConfig.dyn_hi  C2HSState.dyn_hi  CAST.dyn_hi  CAttrs.dyn_hi  CBuiltin.dyn_hi  CHS.dyn_hi  CHSLexer.dyn_hi  CIO.dyn_hi  CInfo.dyn_hi  CLexer.dyn_hi  CNames.dyn_hi  CParser.dyn_hi  CParserMonad.dyn_hi  CPretty.dyn_hi  CTokens.dyn_hi  CTrav.dyn_hi  Config.dyn_hi  DLists.dyn_hi  Errors.dyn_hi  FNameOps.dyn_hi  FastMutInt.dyn_hi  FileOps.dyn_hi  GBMonad.dyn_hi  GenBind.dyn_hi  GenHeader.dyn_hi  Gtk2HsC2Hs.dyn_hi  Gtk2HsSetup.dyn_hi  HookGenerator.dyn_hi  Idents.dyn_hi  (+13 more)
[lab2]/.cabal-sandbox/x86_64-linux-ghc-7.10.3-packages.conf.d/: Cabal-1.24.2.0-63wQQAge71KCAQYlZ67yxB.conf  cairo-0.13.3.1-B3MCDxYfqjAKZszmDBfvdf.conf  gio-0.13.3.1-KobwlCgRKudcemq0fFHxi.conf  glib-0.13.4.1-6Xoe2dXkLlaA5ciLstWh9f.conf  gtk2hs-buildtools-0.13.2.2-517bfdb6b8204770950816244d6266d4.conf  gtk3-0.14.6-LMvQ9xKU26b7sxOhgIwCcG.conf  hashtables-1.2.1.1-90ef7fe25da293c8cb1a7b09c1193c41.conf  package.cache  pango-0.13.3.1-21UqYpgxMdwEfzQkIb2Evr.conf  utf8-string-1.0.1.1-09f6924ad5da4f093413455bda66bd2c.conf
[lab2]/src/: Logic.hs  Main.hs
(+436 files in other folders)
